# hyperrmq

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  memo.txt  setup.sh  simple_test.cpp  test_include.cpp
experiment/: CMakeLists.txt  benchmark_arithmetic_decoding.cpp  benchmark_hypersuccinct_binary_trees.cpp  change_B_Huffman.cpp  change_B_breadth.cpp  change_W_Huffman.cpp  change_n.cpp  change_width.cpp  increasing_runs.cpp  increasing_runs.py  lcp.cpp  lcp.py  microtree_decode.cpp
include/: arithmetic.hpp  array_base.hpp  bit_array.hpp  bitutil.hpp  cartesian_tree.hpp  huffman.hpp  hyper_rmq.hpp  hypersuccinct_binary_tree.hpp  legacy_rmq_huffman.hpp  memutil.hpp  microtree_array.hpp  minimal_cell_array.hpp  rmm_tree.hpp  rmq_bp.hpp  runs.hpp  table.hpp  three_level_prefix_sum.hpp  tree_bp.hpp  tree_covering.hpp  two_level_increasing_array.hpp
include/hyperrmq/: arithmetic.hpp  array_base.hpp  binary_tree.hpp  bit_array.hpp  bitutil.hpp  cartesian_tree.hpp  huffman.hpp  hyper_rmq.hpp  hypersuccinct_binary_tree.hpp  legacy_rmq_huffman.hpp  memutil.hpp  microtree_array.hpp  minimal_cell_array.hpp  rmm_tree.hpp  rmq_bp.hpp  runs.hpp  table.hpp  three_level_prefix_sum.hpp  tree_bp.hpp  tree_covering.hpp  two_level_increasing_array.hpp
pizza&chilli/: download.sh
result/: benchmark_arithmetic_decoding.py  benchmark_arithmetic_decoding.txt  benchmark_hypersuccinct_binary_trees.txt  change_B_Huffman.py  change_B_Huffman.txt  change_B_breadth.py  change_W_Huffman.py  change_W_Huffman.txt  change_breadth_B.txt  change_n.py  change_n.txt  change_width.py  change_width.txt  increasing_runs.py  increasing_runs_100000000_100000.txt  increasing_runs_100000000_1000000.txt  increasing_runs_100000000_10000000.txt  lcp.py  lcp_dblp.xml.200MB.txt  lcp_dna.200MB.txt  lcp_english.200MB.txt  lcp_sources.200MB.txt  microtree_decode.py  microtree_decode.txt
src/: CMakeLists.txt  array_base.cpp  binary_tree.cpp  bit_array.cpp  bitutil.cpp  cartesian_tree.cpp  huffman.cpp  legacy_rmq_huffman.cpp  memutil.cpp  microtree_array.cpp  minimal_cell_array.cpp  runs.cpp  three_level_prefix_sum.cpp  tree_bp.cpp  tree_covering.cpp  two_level_increasing_array.cpp
test/: CMakeLists.txt  arithmetic_test.cpp  binary_tree_test.cpp  bit_array_test.cpp  bitutil_test.cpp  cartesian_tree_test.cpp  huffman_test.cpp  hyper_rmq_test.cpp  hypersuccinct_binary_tree_test.cpp  legacy_rmq_huffman_test.cpp  microtree_array_test.cpp  minimal_cell_array_test.cpp  rmm_tree_test.cpp  rmq_bp_test.cpp  runs_test.cpp  three_level_prefix_sum_test.cpp  tree_bp_test.cpp  tree_covering_test.cpp  two_level_increasing_array_test.cpp
