add_executable(benchmark_arithmetic_decoding benchmark_arithmetic_decoding.cpp)
target_link_libraries(benchmark_arithmetic_decoding hyperrmq)

add_executable(benchmark_hypersuccinct_binary_trees benchmark_hypersuccinct_binary_trees.cpp)
target_link_libraries(benchmark_hypersuccinct_binary_trees hyperrmq)

add_executable(change_B_breadth change_B_breadth.cpp)
target_link_libraries(change_B_breadth hyperrmq)

add_executable(change_B_Huffman change_B_Huffman.cpp)
target_link_libraries(change_B_Huffman hyperrmq)

add_executable(change_n change_n.cpp)
target_link_libraries(change_n hyperrmq ferradarmq sdsl)

add_executable(change_W_Huffman change_W_Huffman.cpp)
target_link_libraries(change_W_Huffman hyperrmq)

add_executable(change_width change_width.cpp)
target_link_libraries(change_width hyperrmq ferradarmq sdsl)

add_executable(increasing_runs increasing_runs.cpp)
target_link_libraries(increasing_runs hyperrmq ferradarmq sdsl)

add_executable(lcp lcp.cpp)
target_link_libraries(lcp hyperrmq ferradarmq sdsl divsufsort divsufsort64)

add_executable(microtree_decode microtree_decode.cpp)
target_link_libraries(microtree_decode hyperrmq)
